# gitbrief

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/codebrief/: __init__.py  cli.py  renderer.py  token_budget.py
src/gitbrief/: __init__.py  cli.py  file_collector.py  git_analyzer.py  mcp_server.py  renderer.py
tests/: test_cli.py  test_file_collector.py  test_git_analyzer.py  test_mcp_server.py  test_renderer.py  test_token_budget.py
