[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitbrief"
version = "0.4.0"
description = "Git-history-aware codebase context generator for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "faw21" }
]
keywords = ["llm", "ai", "context", "git", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tiktoken>=0.5",
    "gitpython>=3.1",
    "pathspec>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gitbrief = "gitbrief.cli:main"

[project.urls]
Homepage = "https://github.com/faw21/gitbrief"
Repository = "https://github.com/faw21/gitbrief"
Issues = "https://github.com/faw21/gitbrief/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gitbrief"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gitbrief --cov-report=term-missing"
